--- a/src/css/FriendManager.css
+++ b/src/css/FriendManager.css
@@ -1,8 +1,8 @@
 .page-container {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   min-block-size: 50vh;
   background-color: #f0f8ff;
 }
@@ -19,7 +19,6 @@
   max-inline-size: 600px;
   inline-size: 100%;
   text-align: center;
-  margin-block-start: 2cm;
 }
 
 .profile-photo {
@@ -33,6 +32,9 @@
 h2 {
   margin-block-start: 0;
   color: #333;
+}
+
+h3 {
   text-decoration: underline;
 }
 
@@ -42,15 +44,8 @@ p {
 }
 
 .amis-container {
-  position: absolute;
-  inset-block-end: 20px;
-  inset-inline-start: 20px;
-  margin: 0;
-  inline-size: auto;
-  background-color: white;
-  padding: 10px;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  inline-size: 25%;
 }
 
 .amis-list {
@@ -80,13 +75,13 @@ p {
 
 button {
   inline-size: 85px;
-  block-size: 40px; 
+  block-size: 40px;
   font-size: 14px;
-  padding: 5px; 
+  padding: 5px;
   border: none;
-  border-radius: 5px; 
+  border-radius: 5px;
   cursor: pointer;
-  background-color: #007bff; 
+  background-color: #007bff;
   color: white;
   transition: background-color 0.3s;
 }
