--- a/src/css/userProfile.css
+++ b/src/css/userProfile.css
@@ -48,11 +48,11 @@
 
 .friends-container {
   position: fixed;
-  inset-block-end: 20px; 
-  inset-inline-start: 0; 
+  inset-block-end: 20px;
+  inset-inline-start: 0;
   inline-size: 200px;
   padding: 20px;
-  margin-inline-start: 10px; 
+  margin-inline-start: 10px;
   background-color: #f0f0f0;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -240,4 +240,42 @@
 .chat-input button:hover {
   background-color: #0056b3;
   transform: scale(1.05);
+}
+
+.user-profile-page {
+  position: relative;
+  padding: 20px;
+}
+
+.search-bar-container {
+  position: absolute;
+  inset-block-start: 20px;
+  inset-inline-start: 20px;
+  inline-size: calc(15% - 40px);
+}
+
+.search-bar {
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 2px solid #ccc;
+  inline-size: 15%;
+}
+
+.info-of-the-day {
+  position: fixed;
+  inset-block-start: 80px;
+  inset-inline-end: 10px;
+  inline-size: 320px;
+  block-size: 180px;
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.france24-iframe {
+  inline-size: 100%;
+  block-size: 100%;
 }
